Revert "Create `PureT`"
This reverts commit 30571c12cb6f2e73ea0fdaf6f8e61d773a61f0ad.

--- a/cabal-gild.cabal
+++ b/cabal-gild.cabal
@@ -128,7 +128,6 @@ library
     CabalGild.Type.PkgconfigDependency
     CabalGild.Type.PkgconfigVersionRange
     CabalGild.Type.Pragma
-    CabalGild.Type.PureT
     CabalGild.Type.Set
     CabalGild.Type.SomeParsecParser
     CabalGild.Type.TestedWith
@@ -150,6 +149,7 @@ test-suite cabal-gild-test-suite
     exceptions,
     filepath,
     hspec ^>=2.11.7,
+    transformers,
 
   hs-source-dirs: source/test-suite
   main-is: Main.hs
