--- a/cabal-gild.cabal
+++ b/cabal-gild.cabal
@@ -22,7 +22,7 @@ flag pedantic
   manual: True
 
 common library
-  build-depends: base ^>=4.16.0.0 || ^>=4.17.0.0 || ^>=4.18.0.0 || ^>=4.19.0.0
+  build-depends: base ^>=4.18.0.0 || ^>=4.19.0.0 || ^>=4.20.0.0
   default-language: Haskell2010
   ghc-options:
     -Weverything
@@ -55,20 +55,16 @@ library
   import: library
   autogen-modules: Paths_cabal_gild
   build-depends:
-    bytestring ^>=0.11.1.0 || ^>=0.12.0.2,
-    containers ^>=0.6.5.1,
-    directory ^>=1.3.6.2,
-    exceptions ^>=0.10.4,
-    filepath ^>=1.4.2.1,
-    parsec ^>=3.1.14.0,
+    Cabal-syntax ^>=3.10.1.0 || ^>=3.12.0.0,
+    bytestring ^>=0.11.4.0 || ^>=0.12.0.2,
+    containers ^>=0.6.7 || ^>=0.7,
+    directory ^>=1.3.8.1,
+    exceptions ^>=0.10.7,
+    filepath ^>=1.4.100.1 || ^>=1.5.2.0,
+    parsec ^>=3.1.16.1,
     pretty ^>=1.1.3.6,
-    text ^>=1.2.5.0 || ^>=2.0.1 || ^>=2.1,
-    transformers ^>=0.5.6.2 || ^>=0.6.1.0,
-
-  if impl(ghc >= 9.4)
-    build-depends: Cabal-syntax ^>=3.8.1.0 || ^>=3.10.1.0
-  else
-    build-depends: Cabal ^>=3.6.0.0
+    text ^>=2.0.2 || ^>=2.1,
+    transformers ^>=0.6.1.0,
 
   -- cabal-gild: discover source/library
   exposed-modules:
@@ -149,7 +145,7 @@ test-suite cabal-gild-test-suite
     directory,
     exceptions,
     filepath,
-    hspec ^>=2.11.7,
+    hspec ^>=2.11.8,
     temporary ^>=1.3,
     transformers,
 
