--- a/cabal-gild.cabal
+++ b/cabal-gild.cabal
@@ -61,12 +61,13 @@ library
     directory ^>=1.3.8.1,
     exceptions ^>=0.10.7,
     filepath ^>=1.4.100.1 || ^>=1.5.2.0,
+    filepattern ^>=0.1.3,
     parsec ^>=3.1.16.1,
     pretty ^>=1.1.3.6,
     text ^>=2.0.2 || ^>=2.1,
     transformers ^>=0.6.1.0,
 
-  -- cabal-gild: discover source/library
+  -- cabal-gild: discover source/library --exclude=**/Action/*.hs
   exposed-modules:
     CabalGild
     CabalGild.Unstable.Action.AttachComments
