--- a/cabal-gild.cabal
+++ b/cabal-gild.cabal
@@ -58,9 +58,9 @@ library
     Cabal-syntax ^>=3.10.1.0 || ^>=3.12.0.0,
     bytestring ^>=0.11.4.0 || ^>=0.12.0.2,
     containers ^>=0.6.7 || ^>=0.7,
-    directory ^>=1.3.8.1,
     exceptions ^>=0.10.7,
     filepath ^>=1.4.100.1 || ^>=1.5.2.0,
+    filepattern ^>=0.1.3,
     parsec ^>=3.1.16.1,
     pretty ^>=1.1.3.6,
     text ^>=2.0.2 || ^>=2.1,
@@ -145,9 +145,10 @@ test-suite cabal-gild-test-suite
   build-depends:
     bytestring,
     containers,
-    directory,
+    directory ^>=1.3.8.1,
     exceptions,
     filepath,
+    filepattern,
     hspec ^>=2.11.8,
     temporary ^>=1.3,
     transformers,
