--- a/cabal-gild.cabal
+++ b/cabal-gild.cabal
@@ -108,6 +108,7 @@ library
     CabalGild.Unstable.Type.Config
     CabalGild.Unstable.Type.Context
     CabalGild.Unstable.Type.Dependency
+    CabalGild.Unstable.Type.DiscoverTarget
     CabalGild.Unstable.Type.ExeDependency
     CabalGild.Unstable.Type.Extension
     CabalGild.Unstable.Type.Flag
