--- a/cabal-gild.cabal
+++ b/cabal-gild.cabal
@@ -61,6 +61,7 @@ library
     exceptions ^>=0.10.7,
     filepath ^>=1.4.100.1 || ^>=1.5.2.0,
     filepattern ^>=0.1.3,
+    mtl ^>=2.3.1,
     parsec ^>=3.1.16.1,
     pretty ^>=1.1.3.6,
     text ^>=2.0.2 || ^>=2.1,
@@ -128,6 +129,7 @@ library
     CabalGild.Unstable.Type.PkgconfigVersionRange
     CabalGild.Unstable.Type.Pragma
     CabalGild.Unstable.Type.Set
+    CabalGild.Unstable.Type.Severity
     CabalGild.Unstable.Type.SomeParsecParser
     CabalGild.Unstable.Type.TestedWith
     CabalGild.Unstable.Type.Variable
