--- a/cabal-gild.cabal
+++ b/cabal-gild.cabal
@@ -82,6 +82,7 @@ library
     CabalGild.Unstable.Class.MonadWalk
     CabalGild.Unstable.Class.MonadWrite
     CabalGild.Unstable.Exception.CheckFailure
+    CabalGild.Unstable.Exception.DuplicateOption
     CabalGild.Unstable.Exception.InvalidLeniency
     CabalGild.Unstable.Exception.InvalidMode
     CabalGild.Unstable.Exception.InvalidOption
@@ -95,6 +96,7 @@ library
     CabalGild.Unstable.Extra.Either
     CabalGild.Unstable.Extra.Field
     CabalGild.Unstable.Extra.FieldLine
+    CabalGild.Unstable.Extra.FilePath
     CabalGild.Unstable.Extra.List
     CabalGild.Unstable.Extra.ModuleName
     CabalGild.Unstable.Extra.Name
