--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,6 +41,8 @@ jobs:
             os: macos-13
           - ghc: '9.10'
             os: macos-14
+          - ghc: 9.2
+            os: ubuntu-22.04
           - ghc: 9.6
             os: ubuntu-22.04
           - ghc: 9.8
