--- a/cabal-gild.cabal
+++ b/cabal-gild.cabal
@@ -21,6 +21,10 @@ flag pedantic
   default: False
   manual: True
 
+common dir
+  build-depends:
+    directory ^>=1.3.8.1
+
 common library
   build-depends: base ^>=4.18.0.0 || ^>=4.19.0.0 || ^>=4.20.0.0
   default-language: Haskell2010
@@ -52,7 +56,7 @@ common executable
     -threaded
 
 library
-  import: library
+  import: library, dir
   autogen-modules: Paths_cabal_gild
   build-depends:
     Cabal-syntax ^>=3.10.1.0 || ^>=3.12.0.0,
@@ -77,6 +81,8 @@ library
     CabalGild.Unstable.Action.ReflowText
     CabalGild.Unstable.Action.Render
     CabalGild.Unstable.Action.StripBlanks
+    CabalGild.Unstable.Class.MonadDirectory
+    CabalGild.Unstable.Class.MonadHandle
     CabalGild.Unstable.Class.MonadLog
     CabalGild.Unstable.Class.MonadRead
     CabalGild.Unstable.Class.MonadWalk
@@ -144,11 +150,10 @@ executable cabal-gild
   main-is: Main.hs
 
 test-suite cabal-gild-test-suite
-  import: executable
+  import: executable, dir
   build-depends:
     bytestring,
     containers,
-    directory ^>=1.3.8.1,
     exceptions,
     filepath,
     filepattern,
