--- a/cabal-gild.cabal
+++ b/cabal-gild.cabal
@@ -21,10 +21,6 @@ flag pedantic
   default: False
   manual: True
 
-common dir
-  build-depends:
-    directory ^>=1.3.8.1
-
 common library
   build-depends: base ^>=4.18.0.0 || ^>=4.19.0.0 || ^>=4.20.0.0
   default-language: Haskell2010
@@ -56,7 +52,7 @@ common executable
     -threaded
 
 library
-  import: library, dir
+  import: library
   autogen-modules: Paths_cabal_gild
   build-depends:
     Cabal-syntax ^>=3.10.1.0 || ^>=3.12.0.0,
@@ -81,7 +77,6 @@ library
     CabalGild.Unstable.Action.ReflowText
     CabalGild.Unstable.Action.Render
     CabalGild.Unstable.Action.StripBlanks
-    CabalGild.Unstable.Class.MonadDirectory
     CabalGild.Unstable.Class.MonadHandle
     CabalGild.Unstable.Class.MonadLog
     CabalGild.Unstable.Class.MonadRead
@@ -92,6 +87,8 @@ library
     CabalGild.Unstable.Exception.InvalidLeniency
     CabalGild.Unstable.Exception.InvalidMode
     CabalGild.Unstable.Exception.InvalidOption
+    CabalGild.Unstable.Exception.MoreThanOneCabalFileFound
+    CabalGild.Unstable.Exception.NoCabalFileFound
     CabalGild.Unstable.Exception.ParseError
     CabalGild.Unstable.Exception.SpecifiedOutputWithCheckMode
     CabalGild.Unstable.Exception.SpecifiedStdinWithFileInput
@@ -150,10 +147,11 @@ executable cabal-gild
   main-is: Main.hs
 
 test-suite cabal-gild-test-suite
-  import: executable, dir
+  import: executable
   build-depends:
     bytestring,
     containers,
+    directory ^>=1.3.8.1,
     exceptions,
     filepath,
     filepattern,
