--- a/cabal-gild.cabal
+++ b/cabal-gild.cabal
@@ -22,7 +22,7 @@ flag pedantic
   manual: True
 
 common library
-  build-depends: base ^>=4.19.0.0 || ^>=4.20.0.0 || ^>=4.21.0.0 || ^>=4.22.0.0
+  build-depends: base ^>=4.20.0.0 || ^>=4.21.0.0 || ^>=4.22.0.0
   default-language: Haskell2010
   ghc-options:
     -Weverything
@@ -53,15 +53,15 @@ library
   import: library
   autogen-modules: Paths_cabal_gild
   build-depends:
-    Cabal-syntax ^>=3.10.1.0 || ^>=3.12.0.0 || ^>=3.14.0.0 || ^>=3.16.0.0,
-    bytestring ^>=0.11.4.0 || ^>=0.12.0.2,
-    containers ^>=0.6.7 || ^>=0.7 || ^>=0.8,
+    Cabal-syntax ^>=3.12.0.0 || ^>=3.14.0.0 || ^>=3.16.0.0,
+    bytestring ^>=0.12.0.2,
+    containers ^>=0.7 || ^>=0.8,
     exceptions ^>=0.10.7,
     filepath ^>=1.4.100.1 || ^>=1.5.2.0,
     filepattern ^>=0.1.3,
     parsec ^>=3.1.16.1,
     pretty ^>=1.1.3.6,
-    text ^>=2.0.2 || ^>=2.1,
+    text ^>=2.1,
     transformers ^>=0.6.1.0,
 
   -- cabal-gild: discover source/library
